--- a/oneoffpatch/tasks/query-opatch.yml
+++ b/oneoffpatch/tasks/query-opatch.yml
@@ -5,16 +5,10 @@
        path: /tmp/grid_opatch_out.xml
        state: absent
 
-# - name: Get OPatch Output for Grid Home
-#   shell: |
-#          export ORACLE_HOME={{ oracle_grid_oracle_home }}
-#          {{ oracle_grid_oracle_home }}/OPatch/opatch lsinventory -xml /tmp/grid_opatch_out.xml >/dev/null
-#   changed_when: false 
-
 - name: Get OPatch Output for Grid Home
   shell: |
          export ORACLE_HOME={{ oracle_grid_oracle_home }}
-         {{ oracle_grid_oracle_home }}/OPatch/opatch lsinventory -xml /tmp/grid_opatch_out.xml
+         {{ oracle_grid_oracle_home }}/OPatch/opatch lsinventory -xml /tmp/grid_opatch_out.xml >/dev/null
   changed_when: false 
 
 - name: Nominate temporary file for recording Database OPatch Output
