--- a/oneoffpatch/tasks/main.yml
+++ b/oneoffpatch/tasks/main.yml
@@ -59,6 +59,9 @@
 
   when: required_patches is defined
 
+- name: What are Required Patches Now
+  debug: var=required_patches
+
 # We run this block to identify and install any absent patches when there is a list of required patches
 # for this environment and we have specified install_absent_patches
 - name: (main) Installation Block when Required Patches are Defined and Install Required
