--- a/oneoffpatch/tasks/check-installed.yml
+++ b/oneoffpatch/tasks/check-installed.yml
@@ -7,10 +7,18 @@
   changed_when: false 
   when: grid_patch | bool
 
-- name: Set Patch Required on Grid
+- name: Set Patch Already Installed on Grid
   set_fact:
      required_patches: "{{ required_patches|combine({patch_id: {'already_applied_to_grid': grid_patch_present.stdout | bool}}, recursive=true) }}"
   when: (grid_patch | bool) 
+
+- name: Set Patch Required on Grid
+  set_fact:
+     required_patches: "{{ required_patches|combine({patch_id: {'install_to_grid_required': true }}, recursive=true) }}"
+  when: 
+     - grid_patch | bool 
+     - not (grid_patch_present.stdout | bool)
+     - grid_patch_version_compatible | bool 
 
 - name: Check if patch {{ patch_number }} is installed on Database 
   shell: |
@@ -19,7 +27,15 @@
   changed_when: false
   when: database_patch | bool
 
-- name: Set Patch Required on Database
+- name: Set Patch Already Installed on Database
   set_fact:
      required_patches: "{{ required_patches|combine({patch_id: {'already_applied_to_database': database_patch_present.stdout | bool}}, recursive=true) }}"
   when: (database_patch | bool)
+  
+- name: Set Patch Required on Database
+  set_fact:
+     required_patches: "{{ required_patches|combine({patch_id: {'install_to_database_required': true }}, recursive=true) }}"
+  when: 
+     - database_patch | bool
+     - not (database_patch_present.stdout | bool)
+     - database_patch_version_compatible | bool
