--- a/oneoffpatch/tasks/check-installed.yml
+++ b/oneoffpatch/tasks/check-installed.yml
@@ -14,10 +14,9 @@
 
 - name: Set Patch Required on Grid
   set_fact:
-     required_patches: "{{ required_patches|combine({patch_id: {'install_to_grid_required': true }}, recursive=true) }}"
+     required_patches: "{{ required_patches|combine({patch_id: {'install_to_grid_required': not (grid_patch_present.stdout | bool) }}, recursive=true) }}"
   when: 
      - grid_patch | bool 
-     - not (grid_patch_present.stdout | bool)
      - grid_patch_version_compatible | bool 
 
 - name: Check if patch {{ patch_number }} is installed on Database 
@@ -34,8 +33,7 @@
   
 - name: Set Patch Required on Database
   set_fact:
-     required_patches: "{{ required_patches|combine({patch_id: {'install_to_database_required': true }}, recursive=true) }}"
+     required_patches: "{{ required_patches|combine({patch_id: {'install_to_database_required': not (database_patch_present.stdout | bool) }}, recursive=true) }}"
   when: 
      - database_patch | bool
-     - not (database_patch_present.stdout | bool)
      - database_patch_version_compatible | bool
