--- a/oneoffpatch/tasks/set-oracle-paths.yml
+++ b/oneoffpatch/tasks/set-oracle-paths.yml
@@ -28,12 +28,12 @@
 - name: Copy oracle_vars_dir directory from localhost to standby host
   copy: 
     src: "{{ oracle_vars_dir }}"
-    dest: "/tmp{{ oracle_vars_dir }}"
+    dest: "/tmp"
 
 # There are potentially multiple config files with this particular version of GI
 - name: Get Potential Grid Config Variable Files
   find:
-     paths: "/tmp{{ oracle_vars_dir }}"
+     paths: "/tmp/{{ oracle_vars_dir.split('/')[-1] }}"
      patterns: "*.yml"
      contains: "oracle_grid_oracle_home.*{{ asm_version_component }}.*"
   register: get_potential_grid_config_files
@@ -41,7 +41,7 @@
 # There are potentially multiple config files with this particular version of Database
 - name: Get Potential Database Config Variable Files
   find:
-     paths: "/tmp{{ oracle_vars_dir }}"
+     paths: "/tmp/{{ oracle_vars_dir.split('/')[-1] }}"
      patterns: "*.yml"
      contains: "oracle_database_oracle_home.*{{ database_version_component }}.*"
   register: get_potential_database_config_files
