--- a/oneoffpatch/tasks/set-oracle-paths.yml
+++ b/oneoffpatch/tasks/set-oracle-paths.yml
@@ -52,6 +52,11 @@
   set_fact:
      oracle_vars_file: "{{ get_potential_grid_config_files.files | intersect(get_potential_database_config_files.files) }}"
 
+- debug:
+    msg: 
+      - "{{ get_potential_grid_config_files }}"
+      - "{{ get_potential_database_config_files }}"
+      - "{{ oracle_vars_file }}"
 # We should have only identified one Oracle configuration file
 - assert:
      that: oracle_vars_file | length == 1
