--- a/oneoffpatch/tasks/check-installed.yml
+++ b/oneoffpatch/tasks/check-installed.yml
@@ -1,11 +1,18 @@
 ---
 
+
+- name: Show Patches Required DEBUG#8A
+  debug: var=required_patches
+
 - name: Check if patch {{ patch_number }} is installed on Grid Infrastructure
   shell: |
          grep -Ec "<patchID>{{ patch_number }}</patchID>" /tmp/grid_opatch_out.xml || [[ $? == 1 ]]
   register: grid_patch_present
   changed_when: false 
   when: grid_patch | bool
+
+- name: Show Patches Required DEBUG#8B
+  debug: var=required_patches
 
 - name: Set Patch Required on Grid
   set_fact:
@@ -14,6 +21,9 @@
      - grid_patch | bool 
      - grid_patch_version_compatible | bool 
 
+- name: Show Patches Required DEBUG#8C
+  debug: var=required_patches
+
 - name: Check if patch {{ patch_number }} is installed on Database 
   shell: |
          grep -Ec "<patchID>{{ patch_number }}</patchID>" /tmp/database_opatch_out.xml || [[ $? == 1 ]]
@@ -21,9 +31,15 @@
   changed_when: false
   when: database_patch | bool
   
+- name: Show Patches Required DEBUG#8D
+  debug: var=required_patches
+
 - name: Set Patch Required on Database
   set_fact:
      required_patches: "{{ required_patches|combine({patch_id: {'install_to_database_required': not (database_patch_present.stdout | bool) }}, recursive=true) }}"
   when: 
      - database_patch | bool
      - database_patch_version_compatible | bool
+    
+- name: Show Patches Required DEBUG#8E
+  debug: var=required_patches
