Use Loop instead of with_dict

--- a/oneoffpatch/tasks/main.yml
+++ b/oneoffpatch/tasks/main.yml
@@ -198,6 +198,17 @@
     - name: Show Ansible Version
       debug: var=ansible_version
 
+    # - name: (main) Find if Any Requested Patches Remain Uninstalled
+    #   include_tasks: check-installed.yml
+    #   vars:
+    #           patch_id: "{{item.key}}"
+    #           patch_number: "{{item.value.patch_number}}"
+    #           grid_patch: "{{item.value.grid_patch}}"
+    #           database_patch: "{{item.value.database_patch}}"
+    #           grid_patch_version_compatible: "{{item.value.grid_patch_version_compatible}}"
+    #           database_patch_version_compatible: "{{item.value.database_patch_version_compatible}}"
+    #   with_dict: "{{ required_patches }}"
+
     - name: (main) Find if Any Requested Patches Remain Uninstalled
       include_tasks: check-installed.yml
       vars:
@@ -207,7 +218,8 @@
               database_patch: "{{item.value.database_patch}}"
               grid_patch_version_compatible: "{{item.value.grid_patch_version_compatible}}"
               database_patch_version_compatible: "{{item.value.database_patch_version_compatible}}"
-      with_dict: "{{ required_patches }}"
+      loop: "{{ required_patches | dict2items }}"
+
 
     - name: Show Patches Required DEBUG#9
       debug: var=required_patches
