Get Ansible Version

--- a/oneoffpatch/tasks/main.yml
+++ b/oneoffpatch/tasks/main.yml
@@ -1,5 +1,14 @@
 ---
 
+- name: Get Ansible
+  shell: |
+         ansible --version
+  register: getansible
+  changed_when: false
+
+- name: Show Ansible
+  debug: var=getansible.stdout
+
 - name: Set fact to define install_patch_id only when parameter patch_id is not empty
   set_fact:
     install_patch_id: patch_id
