Remove privileged user

--- a/oneoffpatch/tasks/main.yml
+++ b/oneoffpatch/tasks/main.yml
@@ -204,6 +204,7 @@
       register: getansible
       changed_when: false
       delegate_to: localhost
+      become: no
 
     - name: Show Ansible
       debug: var=getansible.stdout
